replaced top buttons partial on top container

--- a/app/views/components/home/_top_container.html.erb
+++ b/app/views/components/home/_top_container.html.erb
@@ -3,5 +3,5 @@
     <h1 style ="font-size: 36px;">Neighbor<span style="color: #0D6EFD;">HUD</span></h1>
     <h4 class="top_container__heading" style="font-family: roboto; font-weight: 400;">Here are the recent incidents in your area</h4>
   </div>
-  <%= render "components/home/responsive_top_buttons" %>
+  <%= render "components/top_buttons" %>
 </div>
