back button redirects to last visited url

--- a/app/views/incidents/_incident_back_button.html.erb
+++ b/app/views/incidents/_incident_back_button.html.erb
@@ -1,11 +1,4 @@
-<% if params[:path] == 'map' %>
-  <%= link_to root_path do %>
-    <i class='fas fa-chevron-left me-2'></i>
-    Back
-  <% end %>
-<% elsif %>
-  <%= link_to feed_path do %>
-    <i class='fas fa-chevron-left me-2'></i>
-    Back
-  <% end %>
+<%= link_to request.referer do %>
+  <i class='fas fa-chevron-left me-2'></i>
+  Back
 <% end %>
