refactored incidents show page

--- a/app/assets/stylesheets/pages/incidents/show.scss
+++ b/app/assets/stylesheets/pages/incidents/show.scss
@@ -1,4 +1,14 @@
 .incident-show {
+  display: grid;
+  grid-template-rows: auto;
+  overflow: scroll;
+  max-height: 100vh;
+
+  &__top {
+    padding-inline: 1rem;
+    margin-top: 1rem;
+  }
+
   &__details.card--incident-details {
     margin-top: 0.5rem;
     background-color: #333333;
@@ -31,30 +41,12 @@
     }
   }
 
-  // &__map {
-  //   // transition: all 0.5s;
-  //   // height: 0;
-  //   width: 100%;
-  //   height: 120px;
-
-  //   // &.open {
-  //     // height: 300px;
-  //   // }
-
-  //   .mapboxgl-map {
-  //     overflow: unset !important;
-  //   }
-
-  //   // .mapboxgl-canvas.open {
-  //   //   transition: all 0.5s;
-  //   // }
-
-  // }
-
-  // &__comments {
-  //   max-height: 100%;
-  //   height: 100%;
-  //   overflow: scroll;
-  //   margin-block: 1rem 0.5rem;
-  // }
+  &__comments {
+    max-height: 100%;
+    height: 100%;
+    overflow: scroll;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 11.875rem;
+  }
 }
