added scroll to profile & stylized

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
 @import "pages/index";
 @import "pages/incidents/new";
 @import "pages/feed/index";
+@import "pages/profile/index";
 
 /* ------------------------------- Components ------------------------------- */
 @import "components/index";
