added ajax home

--- a/app/views/components/_top_buttons.html.erb
+++ b/app/views/components/_top_buttons.html.erb
@@ -1,11 +1,14 @@
 <div class="top_container__buttons-container" data-controller="active-button">
-  <button class="btn top_container__button" data-action="click->active-button#setActive">
+  <button class="btn top_container__button active"
+  data-active-button-target="button" >
     All
   </button>
-  <button class="btn top_container__button" data-action="click->active-button#setActive">
+  <button class="btn top_container__button"
+  data-active-button-target="button" >
     Crime News
   </button>
-  <button class="btn top_container__button" data-action="click->active-button#setActive">
+  <button class="btn top_container__button"
+  data-active-button-target="button" >
     User Reports
   </button>
 </div>
