replaced categories list partial being rendered

--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -15,7 +15,7 @@
     <div class="feed__filter">
       <p class="feed__paragraph">Filter by category or date</p>
       <div class="categories">
-        <%= render "category_list" %>
+        <%= render "/components/categories_list.html.erb" %>
       </div>
       <%= render 'date_picker' %>
     </div>
