--- a/app/views/components/_categories_list.html.erb
+++ b/app/views/components/_categories_list.html.erb
@@ -1,79 +1,45 @@
 <!-- TODO: Change icon colors to primary -->
-  <div class="categories__list">
-    <!-- Item Start -->
-    <div class="categories__item">
-      <%= image_tag("icons/home-invasion.svg") %>
-      <p>Invasion</p>
-    </div>
-
-    <!-- Item End -->
-    <!-- Item Start -->
-    <div class="categories__item">
-      <%= image_tag("icons/item-stolen.svg") %>
-      <p>Item Stolen</p>
-    </div>
-    <!-- Item End -->
-    <!-- Item Start -->
-    <div class="categories__item">
-      <%= image_tag("icons/violence.svg") %>
-      <p>Violence</p>
-    </div>
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    <div class="categories__item">
-      <%= image_tag("icons/home-invasion.svg") %>
-      <p>Invasion</p>
-    </div>
-    <!-- Item End -->
-    <!-- Item Start -->
-    <div class="categories__item">
-      <%= image_tag("icons/item-stolen.svg") %>
-      <p>Item Stolen</p>
-    </div>
-    <!-- Item End -->
-    <!-- Item Start -->
-    <div class="categories__item">
-      <%= image_tag("icons/violence.svg") %>
-      <p>Violence</p>
-    </div>
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    <div class="categories__item">
-      <%= image_tag("icons/home-invasion.svg") %>
-      <p>Invasion</p>
-    </div>
-    <!-- Item End -->
-    <!-- Item Start -->
-    <div class="categories__item">
-      <%= image_tag("icons/item-stolen.svg") %>
-      <p>Item Stolen</p>
-    </div>
-    <!-- Item End -->
-    <!-- Item Start -->
-    <div class="categories__item">
-      <%= image_tag("icons/violence.svg") %>
-      <p>Violence</p>
-    </div>
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    <div class="categories__item">
-      <%= image_tag("icons/home-invasion.svg") %>
-      <p>Invasion</p>
-    </div>
-    <!-- Item End -->
-    <!-- Item Start -->
-    <div class="categories__item">
-      <%= image_tag("icons/item-stolen.svg") %>
-      <p>Item Stolen</p>
-    </div>
-    <!-- Item End -->
-    <!-- Item Start -->
-    <div class="categories__item">
-      <%= image_tag("icons/violence.svg") %>
-      <p>Violence</p>
-    </div>
-    <!-- Item End -->
+<div class="categories__list">
+  <div class="categories__item">
+    <%= link_to "/?category=violence" do %>
+      <%= image_tag "/assets/home/violence.png", style: "height: 40px; width: 40px;" %>
+    <% end %>
+    <p>Violence</p>
   </div>
+  <div class="categories__item">
+    <%= link_to "/?category=theft" do %>
+      <%= image_tag "/assets/home/theft.png", style: "height: 40px; width: 40px;" %>
+    <% end %>
+    <p>Theft</p>
+  </div>
+  <div class="categories__item">
+    <%= link_to "/?category=harassment" do %>
+      <%= image_tag "/assets/home/harassment.png", style: "height: 40px; width: 40px;" %>
+    <% end %>
+    <p>Harassment</p>
+  </div>
+  <div class="categories__item">
+    <%= link_to "/?category=disturbing" do %>
+      <%= image_tag "/assets/home/disturb.png", style: "height: 40px; width: 40px;" %>
+    <% end %>
+    <p>Disturbance</p>
+  </div>
+  <div class="categories__item">
+    <%= link_to "/?category=arson" do %>
+      <%= image_tag "/assets/home/arson.png", style: "height: 40px; width: 40px;" %>
+    <% end %>
+    <p>Arson</p>
+  </div>
+  <div class="categories__item">
+    <%= link_to "/?category=drugs" do %>
+      <%= image_tag "/assets/home/drugs.png", style: "height: 40px; width: 40px;" %>
+    <% end %>
+    <p>Drugs</p>
+  </div>
+  <div class="categories__item">
+    <%= link_to "/?category=traffic" do %>
+      <%= image_tag "/assets/home/traffic.png", style: "height: 40px; width: 40px;" %>
+    <% end %>
+    <p>Traffic</p>
+  </div>
+</div>
