--- a/app/assets/stylesheets/components/_categories.scss
+++ b/app/assets/stylesheets/components/_categories.scss
@@ -40,6 +40,11 @@
     align-items: center;
     width: 75px;
 
+    img {
+      width: 40px;
+      height: 40px;
+    }
+
     p {
       margin: 0;
     }
