--- a/app/views/feed/_icon.html.erb
+++ b/app/views/feed/_icon.html.erb
@@ -1,3 +1,4 @@
+<!-- TODO: Is this being used? -->
 <% if category == 'Violence'%>
   <%= image_tag '/assets/home/violence.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
 <% elsif category == 'Harassment' %>
