--- a/app/views/components/_top_buttons.html.erb
+++ b/app/views/components/_top_buttons.html.erb
@@ -1,14 +1,14 @@
 <div class="top_container__buttons-container" data-controller="active-button">
   <button class="btn top_container__button active"
-  data-active-button-target="button" >
+  data-active-button-target="topButton" >
     All
   </button>
   <button class="btn top_container__button"
-  data-active-button-target="button" >
+  data-active-button-target="topButton" >
     Crime News
   </button>
   <button class="btn top_container__button"
-  data-active-button-target="button" >
+  data-active-button-target="topButton" >
     User Reports
   </button>
 </div>
