--- a/app/views/components/_categories_list.html.erb
+++ b/app/views/components/_categories_list.html.erb
@@ -3,10 +3,11 @@
   <% Dir.each_child("app/assets/images/home") do |file| %>
     <% formatted_file = file.gsub(".png", "") %>
     <div class="categories__item">
-      <%= link_to "/?category=#{formatted_file}" do %>
+      <%#= "/?category=#{formatted_file}" %>
+      <button data-active-button-target="categoryButton">
         <%= image_tag "#{file}" %>
-      <% end %>
-      <p><%= formatted_file.capitalize %></p>
+        <p><%= formatted_file.capitalize %></p>
+      </button>
     </div>
   <% end %>
 </div>
