fixed filter button

--- a/app/assets/stylesheets/components/_categories.scss
+++ b/app/assets/stylesheets/components/_categories.scss
@@ -7,6 +7,7 @@
   row-gap: 0.25rem;
   column-gap: 0.5rem;
   position: relative;
+  overflow: hidden;
 
 /* ----------------------------- Categories List ---------------------------- */
   &__list {
