fixed mapbox height

--- a/app/views/profile/_comments.html.erb
+++ b/app/views/profile/_comments.html.erb
@@ -14,7 +14,7 @@
   <div class="d-flex justify-content-end m-3">
     <button
       data-action="read-more#toggle">
-      Read more
+      See more
     </button>
   </div>
   </div>
