--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -5,8 +5,8 @@
   <div
     class="profile__incidents mt-2"
     data-controller="read-more"
-    data-read-more-more-text-value="Read more"
-    data-read-more-less-text-value="Read less"
+    data-read-more-more-text-value="See more"
+    data-read-more-less-text-value="See less"
   >
     <h5 class="text--gray text--roboto"><em>My Posts:</em></h5>
     <%= render 'incidents', user: @user %>
@@ -14,8 +14,8 @@
   <div
     class="profile__comments"
     data-controller="read-more"
-    data-read-more-more-text-value="Read more"
-    data-read-more-less-text-value="Read less"
+    data-read-more-more-text-value="See more"
+    data-read-more-less-text-value="See less"
   >
     <h5 class="text--gray text--roboto"><em>My Comments:</em></h5>
     <%= render 'comments', user: @user %>
