--- a/app/views/incidents/_incident_card.html.erb
+++ b/app/views/incidents/_incident_card.html.erb
@@ -6,7 +6,7 @@
     <div class="col-3">
       <div class="d-flex justify-content-end align-items-center card--category">
         <%= @incident.category_list.first %>
-        <%= image_tag @incident.image_path, style: "width: 25px; height: 25px;", class: "ms-1" %>
+        <%= render 'icon', category: @incident.category_list.first %>
       </div>
     </div>
   </div>
