--- a/app/views/feed/_icon.html.erb
+++ b/app/views/feed/_icon.html.erb
@@ -1,16 +1,16 @@
 <!-- TODO: Is this being used? -->
 <% if category == 'Violence'%>
-  <%= image_tag '/assets/home/violence.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
+  <%= image_tag 'violence.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
 <% elsif category == 'Harassment' %>
-  <%= image_tag '/assets/home/harassment.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
+  <%= image_tag 'harassment.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
 <% elsif category == 'Drugs' %>
-  <%= image_tag '/assets/home/drugs.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
+  <%= image_tag 'drugs.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
 <% elsif category == 'Traffic' %>
-  <%= image_tag '/assets/home/traffic.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
+  <%= image_tag 'traffic.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
 <% elsif category == 'Theft' %>
-  <%= image_tag '/assets/home/theft.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
+  <%= image_tag 'theft.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
 <% elsif category == 'Disturbing the Peace' %>
-  <%= image_tag '/assets/home/disturb.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
+  <%= image_tag 'disturb.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
 <% elsif category == 'Arson' %>
-  <%= image_tag '/assets/home/arson.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
+  <%= image_tag 'arson.png', style: "width: 35px; height: 35px;", class: "ms-1" %>
 <% end %>
