moved data controller to index parent

--- a/app/views/components/_categories_list.html.erb
+++ b/app/views/components/_categories_list.html.erb
@@ -1,4 +1,4 @@
-<div class="categories__list" data-controller="active-button">
+<div class="categories__list">
   <% Dir.each_child("app/assets/images/home") do |file| %>
     <% formatted_file = file.gsub(".png", "") %>
     <div class="categories__item">
