--- a/app/views/components/_top_buttons.html.erb
+++ b/app/views/components/_top_buttons.html.erb
@@ -1,4 +1,4 @@
-<div class="top_container__buttons-container" data-controller="active-button">
+<div class="top_container__buttons-container">
   <button class="btn top_container__button active"
   data-active-button-target="topButton" >
     All
