--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="incidents-index">
+<div class="incidents-index"  data-controller="active-button">
   <%= render "shared/map" %>
   <%= render "components/home/top_container" %>
   <%= render "components/filter" %>
