--- a/app/views/profile/_comments.html.erb
+++ b/app/views/profile/_comments.html.erb
@@ -31,13 +31,13 @@
       </div>
     <% end %>
   </template>
-<% elsif @user.comments.count <= 3 %>
+<% elsif @user.comments.count <= 3 && @user.comments.count < 0%>
   <% @user.comments.each do |comment| %>
     <div class="comments__cards mt-2">
       <p class="comments__header ms-3 me-3">You commented on <%= link_to comment.incident.title, incident_path(comment.incident) %> on <%= comment.created_at.strftime("%Y-%m-%d") %></p>
       <%= render 'incidents/comment_card', comment: comment %>
     </div>
   <% end %>
-<% elsif @user.comments.first.nil? %>
+<% elsif @user.comments.count == 0 %>
   <p class="m-3"><em>You have no comments</em></p>
 <% end %>
