--- a/app/views/incidents/_incident_card_bottom.html.erb
+++ b/app/views/incidents/_incident_card_bottom.html.erb
@@ -1,6 +1,6 @@
 <p class="card--category">
-  <% meguro_lat = 35.6415 %>
-  <% meguro_long = 139.6981 %>
+  <% meguro_lat = 35.0116 %> <%# 35.6415 %>
+  <% meguro_long = 135.7681 %> <%# 139.6981 %>
   <% if request.location.latitude.present? %>
     <% distance = (Geocoder::Calculations.distance_between([request.location.latitude, request.location.longitude], [@incident.latitude, @incident.longitude])).round(0) %>
   <% elsif @incident.latitude.nil? %>
