--- a/app/views/incidents/_icon.html.erb
+++ b/app/views/incidents/_icon.html.erb
@@ -9,7 +9,7 @@
   <%= image_tag 'traffic.png', style: "width: 25px; height: 25px;", class: "ms-1" %>
 <% elsif category == 'Theft' %>
   <%= image_tag 'theft.png', style: "width: 25px; height: 25px;", class: "ms-1" %>
-<% elsif category == 'Disturbing the Peace' %>
+<% elsif category == 'Disturb' %>
   <%= image_tag 'disturb.png', style: "width: 25px; height: 25px;", class: "ms-1" %>
 <% elsif category == 'Arson' %>
   <%= image_tag 'arson.png', style: "width: 25px; height: 25px;", class: "ms-1" %>
