--- a/app/views/incidents/_incident_card.html.erb
+++ b/app/views/incidents/_incident_card.html.erb
@@ -5,7 +5,11 @@
     </div>
     <div class="col-3">
       <div class="d-flex justify-content-end align-items-center card--category">
-        <%= @incident.category_list.first %>
+        <% if @incident.category_list.first == 'Disturb' %>
+          Disturbing the peace
+        <% else %>
+          <%= @incident.category_list.first %>
+        <% end %>
         <%= render 'icon', category: @incident.category_list.first %>
       </div>
     </div>
