removed unused date picker partial

--- a/app/views/components/_filter.html.erb
+++ b/app/views/components/_filter.html.erb
@@ -5,6 +5,6 @@
   </button>
   <div class="card__body" data-filter-target="card">
     <%= render "components/categories" %>
-    <%= render "components/date_picker" %>
+    <%= render "components/date_picker", path: root_path %>
   </div>
 </div>
