--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -13,7 +13,7 @@
       <div class="categories">
         <%= render "/components/categories_list.html.erb" %>
       </div>
-      <%= render 'date_picker' %>
+      <%= render 'components/date_picker', path: feed_path %>
     </div>
   </div>
 </div>
