--- a/app/views/components/_date_picker.html.erb
+++ b/app/views/components/_date_picker.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= form_tag root_path, method: :get, class:"date-picker" do |f| %>
+  <%= form_tag path, method: :get, class:"date-picker" do |f| %>
     <%= label :start_date, "Incidents from: " %>
     <%= text_field_tag :start_date, params[:start_date],
       class: "date-picker__input",
