--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -21,7 +21,7 @@
     <%= render 'comments', user: @user %>
   </div>
   <%= link_to destroy_user_session_path, method: :delete do%>
-  <div class="LogoutButton">
+  <div class="button--logout">
     <em>Log Out</em>
   </div>
   <% end %>
