fixed incidents/new date format

--- a/app/assets/stylesheets/pages/incidents/new.scss
+++ b/app/assets/stylesheets/pages/incidents/new.scss
@@ -20,4 +20,9 @@
     top: 0;
     right: -0.5rem;
   }
+
+  &__date-picker {
+    display: grid;
+    grid-template-columns: 0.5fr 0.5fr auto;
+  }
 }
