--- a/app/views/components/_date_picker_for_report.html.erb
+++ b/app/views/components/_date_picker_for_report.html.erb
@@ -1,12 +1,15 @@
 <!-- TODO: Fix form -->
 <!-- TODO: Set the controller -->
-<div>
+<div class="incidents-new__date-picker">
   <%= form_with url: "/incidents", method: :get, class:"date_picker_report" do |f| %>
     <%= f.label :incident_date, "Select date: " %>
     <%= f.date_field :incident_date,
+      class: "date-picker__input form-control input",
       data: {
         controller: "flatpickr",
-        flatpickr_date_format: "Y-m-d",
+        flatpickr_alt_input: "true",
+        flatpickr_date_format: "m-d",
+        flatpickr_alt_format: "M J",
         flatpickr_disable_mobile: "true", # Prevents native picker on mobile
         flatpickr_default_date: "today",
       }%>
