--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -2,26 +2,29 @@
   <%= simple_form_for @incident,
                     data: {
                       report_details_target: 'form',
-                      action: "submit->report-details#create" } do |f| %>
+                      action:"keyup->report-details#validateForm" } do |f| %>
     <div class="report">
       <%# <%= render "components/incident_report", f: f %>
       <div class="report-form">
         <h3 class="report_container__heading">Report on <span>Incident</span></h3>
         <%# Location and category need to be updated later. The current ones are temporary codes. %>
-        <%= f.input :location,
+        <%# <%= f.input :location,
                     input_html: { data: { geocoder_target: "location" }, class: "search" },
                     wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } },
-                    label: false,
-                    as: :hidden %>
+                    label: false %>
         <%= f.input :latitude, label: false, as: :hidden,  input_html: { class: "latitude" } %>
         <%= f.input :longitude, label: false, as: :hidden, input_html: { class: "longitude" }  %>
         <%# <p>Select a category</p> %>
         <%#= render "components/categories" %>
-        <%# <%= f.input :location, placeholder: "Enter a location", input_html: { class: "search" }, as: :hidden %>
+        <%= f.input :location,
+                    placeholder: "Enter a location",
+                    input_html: { class: "search" },
+                    data: { target: "report-details.location" } %>
         <%= f.input :category_list,
                     label: "Add categories",
                     collection: [ "Violence", "Theft", "Arson", "Drugs", "Harrasment", "Disturbing the Peace", "Traffic" ],
-                    input_html: { class: "category" } %>
+                    input_html: { class: "category" },
+                    data: { target: "report-details.category" } %>
         <div class="date-and-comments">
           <%= render "components/date_picker_for_report" %>
           <%= f.input :can_receive_comments,
@@ -32,7 +35,7 @@
         </div>
       </div>
       <div class="card card--gray">
-        <div class="report-details" style="background: $dark-gradient;">
+        <div class="report-details">
           <%#<%= render "components/ report_details"> %>
           <button class="report_details__button" data-action="click->report-details#openCard" data-report-details-target="button">
             <i class="fas fa-info-circle"></i>
@@ -43,7 +46,8 @@
             <%= f.input :title,
                 label: false,
                 placeholder: "What happened?",
-                input_html: { class: "title" } %>
+                input_html: { class: "title" },
+                data: { target: "report-details.title" } %>
             <%= f.input :description,
                 placeholder: "Write incident details here (optional)",
                 label: false,
@@ -55,7 +59,8 @@
       <%= f.button :submit,
                     "Report",
                     class: "btn btn--report report-details__submit",
-                    data: { disable_with: "Reporting Incident..." } %>
+                    diable_with: "Reporting Incident...",
+                    data: { target: "report-details.reportButton" } %>
     <% end %>
   </div>
   <%= render 'shared/map' %>
