commented out display:none for the mapbox search bar

--- a/app/assets/stylesheets/pages/incidents/new.scss
+++ b/app/assets/stylesheets/pages/incidents/new.scss
@@ -13,7 +13,8 @@
   }
 
   .mapboxgl-ctrl-geocoder--input {
-    display: none;
+    // display: none;
+    width: 70%;
   }
 
   .mapboxgl-ctrl.mapboxgl-ctrl-group {
