--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -13,16 +13,20 @@
                     wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } },
                     label: false %>
         <%= f.input :latitude, label: false, as: :hidden,  input_html: { class: "latitude" } %>
-        <%= f.input :longitude, label: false, as: :hidden, input_html: { class: "longitude" }  %>
-        <%# <p>Select a category</p> %>
-        <%#= render "components/categories" %>
-        <div data-report-details-target="test"></div>
+        <%= f.input :longitude, label: false, as: :hidden, input_html: { class: "longitude" } %>
         <%= f.input :location,
                     placeholder: "Enter a location",
                     input_html: {
                       class: "search",
                       data: { "report-details-target": "location" }
-                    } %>
+                    },
+                    as: :hidden %>
+        <%# <p>Select a category</p> %>
+        <%# <%= render "components/categories" %>
+        <%# <%= f.input :category_list,
+                    input_html: {
+                      class: "category",
+                      data: { "report-details-target": "category" }} %>
         <%= f.input :category_list,
                     label: "Add categories",
                     collection: [ "Violence", "Theft", "Arson", "Drugs", "Harrasment", "Disturbing the Peace", "Traffic" ],
