set the location field of simple form as hidden again

--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -7,7 +7,7 @@
       <%# <%= render "components/incident_report", f: f %>
       <div class="report-form">
         <h3 class="report_container__heading">Report on <span>Incident</span></h3>
-        <%# Location and category need to be updated later. The current ones are temporary codes. %>
+        <%# Category need to be updated later. The current ones are temporary codes. %>
         <%# <%= f.input :location,
                     input_html: { data: { geocoder_target: "location" }, class: "search" },
                     wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } },
