--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -4,76 +4,24 @@
                       report_details_target: 'form',
                       action:"keyup->report-details#validateForm" } do |f| %>
     <div class="report">
-      <%# <%= render "components/incident_report", f: f %>
       <div class="report-form">
         <h3 class="report_container__heading">Report on <span>Incident</span></h3>
-        <%# Category need to be updated later. The current ones are temporary codes. %>
-        <%# <%= f.input :location,
-                    input_html: { data: { geocoder_target: "location" }, class: "search" },
-                    wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } },
-                    label: false %>
-        <%= f.input :latitude, label: false, as: :hidden,  input_html: { class: "latitude" } %>
-        <%= f.input :longitude, label: false, as: :hidden, input_html: { class: "longitude" } %>
-        <%= f.input :location,
-                    placeholder: "Enter a location",
-                    input_html: {
-                      class: "search",
-                      data: { "report-details-target": "location" }
-                    },
-                    as: :hidden %>
-        <%# <p>Select a category</p> %>
-        <%# <%= render "components/categories" %>
-        <%# <%= f.input :category_list,
-                    input_html: {
-                      class: "category",
-                      data: { "report-details-target": "category" }} %>
-        <%= f.input :category_list,
-                    label: "Add categories",
-                    collection: [ "Violence", "Theft", "Arson", "Drugs", "Harrasment", "Disturbing the Peace", "Traffic" ],
-                    input_html: {
-                      class: "category",
-                      data: { "report-details-target": "category" }
-                    } %>
+        <%= render "hidden_location_input", f: f %>
+        <%= render "report_location_input", f: f %>
+        <%= render "report_categories_input", f: f %>
         <div class="date-and-comments">
-          <%= render "components/date_picker_for_report" %>
-          <%= f.input :can_receive_comments,
-              as: :boolean,
-              label:"Comments",
-              class: "comment",
-              input_html: { class: "toggle" } %>
+          <%= render "date_picker_for_report" %>
+          <%= render "report_comments_switcher", f: f %>
         </div>
       </div>
-      <div class="card card--gray">
-        <div class="report-details">
-          <%#<%= render "components/ report_details"> %>
-          <button class="report_details__button" data-action="click->report-details#openCard" data-report-details-target="button">
-            <i class="fas fa-info-circle"></i>
-            Add more details
-            <span class="arrow"><i class="fas fa-chevron-up"></i></span>
-          </button>
-          <div class="card__body" data-report-details-target="card">
-            <%= f.input :title,
-                label: false,
-                placeholder: "What happened?",
-                input_html: {
-                  class: "title",
-                  data: { "report-details-target": "title" }
-                } %>
-            <%= f.input :description,
-                placeholder: "Write incident details here (optional)",
-                label: false,
-                input_html: { class: "description" },
-                required: false %>
-          </div>
-        </div>
-      </div>
+      <%= render "report_details", f: f %>
       <%= f.button :submit,
                     "Report",
                     class: "btn btn--report report-details__submit",
                     diable_with: "Reporting Incident...",
                     disabled: true,
                     data: { "report-details-target": "reportButton" } %>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
   <%= render 'shared/map' %>
 </div>
