--- a/app/assets/stylesheets/components/_report_details.scss
+++ b/app/assets/stylesheets/components/_report_details.scss
@@ -1,5 +1,5 @@
 .report-details {
-  padding-block: 0.9rem;
+  padding-top: 0.9rem;
   border: 1px solid #333333;
   border-radius: 1rem;
   background: #333333;
@@ -13,10 +13,10 @@
     transition: all 0.3s ease-in-out;
     max-height: 0px;
     overflow: hidden;
+    border-top: 2px solid transparent;
 
     &.open {
-      max-height: 800px;
-      margin-top: 0.7em;
+      max-height: 150px;
       padding: 0;
       border-top: 2px solid #6d6d6d;
       background: #383838;
@@ -40,6 +40,7 @@
     background: transparent;
     font-weight: 600;
     letter-spacing: 1px;
+    padding-bottom: 1rem;
 
     i {
       transition: $transition;
@@ -55,6 +56,4 @@
       }
     }
   }
-
-
 }
