--- a/app/assets/stylesheets/pages/incidents/new.scss
+++ b/app/assets/stylesheets/pages/incidents/new.scss
@@ -11,11 +11,7 @@
     left: 50%;
     transform: translateX(-50%);
   }
-
-  .mapboxgl-ctrl-geocoder--input {
-    
-  }
-
+  
   .mapboxgl-ctrl.mapboxgl-ctrl-group {
     top: 0;
     right: -0.5rem;
@@ -24,5 +20,6 @@
   &__date-picker {
     display: grid;
     grid-template-columns: 0.5fr 0.5fr auto;
+    align-self: start;
   }
 }
