--- a/app/views/incidents/_report_categories_input.html.erb
+++ b/app/views/incidents/_report_categories_input.html.erb
@@ -1,6 +1,6 @@
 <%= f.input :category_list,
             label: "Add categories",
-            collection: [ "Violence", "Theft", "Arson", "Drugs", "Harrasment", "Disturbing the Peace", "Traffic" ],
+            collection: [ "Violence", "Theft", "Arson", "Drugs", "Harrasment", "Disturb", "Traffic" ],
             selected: 0,
             input_html: {
               class: "category",
