--- a/app/views/incidents/_report_details.html.erb
+++ b/app/views/incidents/_report_details.html.erb
@@ -2,8 +2,7 @@
   <div class="report-details">
     <button class="report-details__button" data-action="click->report-details#openCard" data-report-details-target="button">
       <i class="fas fa-info-circle"></i>
-      Add more details
-      <span class="arrow"><i class="fas fa-chevron-up"></i></span>
+      Add details
     </button>
     <div class="card__body" data-report-details-target="card">
       <%= f.input :title,
