--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -5,7 +5,7 @@
                       action:"keyup->report-details#validateForm" } do |f| %>
     <div class="report">
       <div class="report-form">
-        <h3 class="report_container__heading">Report on <span>Incident</span></h3>
+        <h3 class="report_container__heading">Report an <span>Incident</span></h3>
         <%= render "hidden_location_input", f: f %>
         <%= render "report_location_input", f: f %>
         <%= render "report_categories_input", f: f %>
