--- a/app/assets/stylesheets/components/_report_bar.scss
+++ b/app/assets/stylesheets/components/_report_bar.scss
@@ -7,6 +7,10 @@
   text-align: center;
   z-index: 2;
 
+  h3 {
+    font-size: calc(1.3rem + 3vw);
+  }
+
   .report-form {
     margin-bottom: 0;
 
@@ -24,7 +28,7 @@
 
   .select .form-select {
     margin-bottom: 1px;
-    border-radius: 1rem;
+    border-radius: 50px;
     background: #bcc4cd;
   }
 
