created route scss file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,7 @@
 @import "pages/incidents/new";
 @import "pages/feed/index";
 @import "pages/profile/index";
+@import "pages/route/index";
 
 /* ------------------------------- Components ------------------------------- */
 @import "components/index";
