--- a/app/assets/stylesheets/components/_report_details.scss
+++ b/app/assets/stylesheets/components/_report_details.scss
@@ -15,7 +15,7 @@
     border-top: 2px solid transparent;
     background: #333333;
     width: 100%;
-    border-radius: 16px 16px 0 0;
+    // border-radius: 16px 16px 0 0;
 
     &.open {
       max-height: 150px;
