--- a/app/views/incidents/_report_details.html.erb
+++ b/app/views/incidents/_report_details.html.erb
@@ -4,7 +4,7 @@
       <i class="fas fa-info-circle"></i>
       Add details
     </button>
-    <div class="card__body" data-report-details-target="card">
+    <div class="card__body">
       <%= f.input :title,
                 label: false,
                 placeholder: "What happened?",
