made open the default and adjusted buttons for closed class for card

--- a/app/assets/stylesheets/components/_report_details.scss
+++ b/app/assets/stylesheets/components/_report_details.scss
@@ -17,9 +17,10 @@
     width: 100%;
     // border-radius: 16px 16px 0 0;
 
-    &.open {
-      max-height: 150px;
+    &.close {
+      max-height: 0px;
       padding: 0;
+      overflow: hidden;
     }
   }
 
