--- a/app/views/incidents/_report_details.html.erb
+++ b/app/views/incidents/_report_details.html.erb
@@ -1,10 +1,10 @@
-<div class="card card--gray">
+<div class="card card--gray" data-report-details-target="detailsCard">
   <div class="report-details">
-    <button class="report-details__button">
+    <button class="report-details__button" data-action="click->report-details#closeCard" data-report-details-target="button">
       <i class="fas fa-info-circle"></i>
       Add details
     </button>
-    <div class="card__body">
+    <div class="card__body" data-report-details-target="card">
       <%= f.input :title,
                 label: false,
                 placeholder: "What happened?",
