--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,10 +6,6 @@
   overflow: hidden;
   margin-bottom: 24px;
 
-  // &__body {
-  //   padding: 1rem 1.5rem;
-  // }
-
   &.card--dark {
     background: $dark;
   }
@@ -18,6 +14,11 @@
     background: #383838;
     margin: 0;
     border-radius: 16px 16px 0 0;
+
+    &.close {
+      bottom: 5.5em;
+      border-radius: 50px;
+    }
   }
 }
 
